--- a/2012-12-20-test.md
+++ b/2012-12-20-test.md
@@ -17,7 +17,7 @@ categories: [cat1, cat2]
 　愛育黎首　臣伏戎羌  遐邇壹體　率賓歸王
 　鳴鳳在樹　白駒食場　化被草木　賴及萬方
 
-![image placeholder](http://placehold.it/350x150)
+![image placeholder](http://www.baidu.com/img/bdlogo.png)
 
 > 日出扶桑一丈高，人间万事细如毛。野夫怒见不平处，磨损胸中万古刀。
 
