--- a/2012-12-20-test.md
+++ b/2012-12-20-test.md
@@ -21,11 +21,28 @@ categories: [cat1, cat2]
 
 > 日出扶桑一丈高，人间万事细如毛。野夫怒见不平处，磨损胸中万古刀。
 
+
 $$
-\begin{equation} \begin{array}{lll}
-    \nabla\times E &=& -\;\frac{\partial{B}}{\partial{t}}\     \nabla\times H
-&=& \frac{\partial{D}}{\partial{t}}+J\     \nabla\cdot D &=& \rho\
-\nabla\cdot B &=& 0\ \end{array}
+\begin{aligned}
+\nabla \times \vec{\mathbf{B}} -\, \frac1c\,
+\frac{\partial\vec{\mathbf{E}}}{\partial t} & = \frac{4\pi}{c}\vec{\mathbf{j}}
+\\   \nabla \cdot \vec{\mathbf{E}} & = 4 \pi \rho \\
+\nabla \times \vec{\mathbf{E}}\, +\, \frac1c\,
+\frac{\partial\vec{\mathbf{B}}}{\partial t} & = \vec{\mathbf{0}} \\
+\nabla \cdot \vec{\mathbf{B}} & = 0 \end{aligned}
+$$
+
+$$
+1 +  \frac{q^2}{(1-q)}+\frac{q^6}{(1-q)(1-q^2)}+\cdots = \prod_{j=0}^{\infty}\frac{1}{(1-q^{5j+2})(1-q^{5j+3})}, \quad\quad \text{for $|q|<1$}.
+$$
+
+$$
+\begin{equation}
+\mathbf{V}_1 \times \mathbf{V}_2 =  \begin{vmatrix}
+\mathbf{i} & \mathbf{j} & \mathbf{k} \\
+\frac{\partial X}{\partial u} &  \frac{\partial Y}{\partial u} & 0 \\
+\frac{\partial X}{\partial v} &  \frac{\partial Y}{\partial v} & 0
+\end{vmatrix}
 \end{equation}
 $$
 
