--- a/2015-08-11-homebrew.md
+++ b/2015-08-11-homebrew.md
@@ -7,7 +7,7 @@ tags: [homebrew, brew, brew cask, mac]
 
 ## Homebrew
 
-[Homebrew](http://brew.sh/) 是MAC下的包管理工具，可以当做`debian`下的`apt-get`，但要强大得多。它尽可能的利用系统自带库，大大缩短编译时间；冗余库极少，软件包的管理清晰灵活；安装脚本完全用`ruby`编写，极易自由定制[^3]。
+[Homebrew](http://brew.sh/) 是MAC下的包管理工具，可以当做`debian`下的`apt-get`，但要强大得多。它尽可能的利用系统自带库，大大缩短编译时间；冗余库极少，软件包的管理清晰灵活；安装脚本完全用`ruby`编写，极易自由定制[^linfan]。
 
 一键安装（一键脚本请参照官网，可能略有不同）：
 
@@ -49,6 +49,7 @@ Further help:
 ![brew actions](http://wulfric.qiniudn.com/brew-action.png "brew actions")
 
 按照官方的介绍：
+
 - Homebrew installs [the stuff you need](https://github.com/Homebrew/homebrew/tree/master/Library/Formula) that Apple didn’t. 是MAC OS生态的重要补充，提供了大量在Linux下喜闻乐见的工具，比如`curl`, `rename`, `wget`等等；
 - Homebrew installs packages to their own directory and then symlinks their files into `/usr/local`. 通过 brew 安装的软件可以和系统原软件完美兼容，互不影响；
 - Homebrew won’t install files outside its prefix, and you can place a Homebrew installation wherever you like. homebrew 安装的文件默认全部在其指定的目录下，不会安装在其他位置。方便删除，可以自定义 homebrew 的安装位置；
@@ -84,9 +85,9 @@ PS: 使用 [LaunchRocket](https://github.com/jimbojsb/launchrocket) 管理 brew 
 
 ## Homebrew Cask
 
-[caskroom](http://caskroom.io/)(brew cask) 构建于 Homebrew，继承了其优雅和便捷性，提供安装 OS X 应用和二进制软件的新方法。可以这么简单理解，brew安装的是命令行工具，比如`curl`, `rename`, `wget`；brew cask安装的是应用软件，比如`google chrome`, `dropbox`等。通过brew cask 安装软件，只需要简单的一条命令`brew cask install google-chrome`即可，再也不需要以前的打开网页、找到链接、下载软件、解压包、放到程序目录，删除安装文件，再来启动它这么复杂的步骤了。一键完成！[^1]
+[caskroom](http://caskroom.io/)(brew cask) 构建于 Homebrew，继承了其优雅和便捷性，提供安装 OS X 应用和二进制软件的新方法。可以这么简单理解，brew安装的是命令行工具，比如`curl`, `rename`, `wget`；brew cask安装的是应用软件，比如`google chrome`, `dropbox`等。通过brew cask 安装软件，只需要简单的一条命令`brew cask install google-chrome`即可，再也不需要以前的打开网页、找到链接、下载软件、解压包、放到程序目录，删除安装文件，再来启动它这么复杂的步骤了。一键完成！[^yangzhiping]
 
-虽然通过 Mac App Store 安装软件一样很简单，但是 Mac App Store 生态圈远不完善，审核流程过长，限制太多，维护成本过高让很多应用开发者被迫离开。大量软件缺失。[^2]
+虽然通过 Mac App Store 安装软件一样很简单，但是 Mac App Store 生态圈远不完善，审核流程过长，限制太多，维护成本过高让很多应用开发者被迫离开。大量软件缺失。[^ksmx]
 
 安装`brew install caskroom/cask/brew-cask`，安装完毕后执行`brew cask`，可以看到 cask 提供的命令基本上继承自 brew：
 
@@ -170,6 +171,8 @@ PS: alfred 支持，`brew cask alfred link`。
 
 PS: brew 和 brew cask 的下载都是断点续传的。
 
-[^1]: http://www.yangzhiping.com/tech/homebrew-cask.html
-[^2]: http://ksmx.me/homebrew-cask-cli-workflow-to-install-mac-applications/
-[^3]: http://linfan.info/blog/2012/02/25/homebrew-installation-and-usage/
+[^yangzhiping]: [Mac安装软件新方法：Homebrew-cask](http://www.yangzhiping.com/tech/homebrew-cask.html)
+
+[^ksmx]: [简洁优雅的Mac OS X软件安装体验 - homebrew-cask](http://ksmx.me/homebrew-cask-cli-workflow-to-install-mac-applications/)
+
+[^linfan]: [Homebrew的安装与使用](http://linfan.info/blog/2012/02/25/homebrew-installation-and-usage/)
