--- a/2015-08-11-homebrew.md
+++ b/2015-08-11-homebrew.md
@@ -165,7 +165,7 @@ end
 
 更有趣的是，你的重装系统将变得极为简单！把你的常用软件列表记下来，然后执行`brew cask install software-1 software-2 ... software-n`，然后睡一觉就一切搞定了~ 个人文档数据通过`dropbox`直接恢复~你的代码肯定都在 github~
 
-PS: cask 重装软件，`brew cask uninstall xxx && brew cask install xxx`。
+PS: cask 重装软件，`brew cask uninstall xxx && brew cask install xxx`或`brew cask install xxx --force`。
 
 PS: alfred 支持，`brew cask alfred link`。
 
