--- a/2015-08-12-iterm2.md
+++ b/2015-08-12-iterm2.md
@@ -2,7 +2,7 @@
 title: 你应该知道的 iTerm2 使用方法--MAC终端工具
 date: 2015-08-12 16:18
 categories: [技术]
-tags: [iTerm2, tmux, mac]
+tags: [iTerm2, tmux, mosh, mac]
 ---
 
 ## iTerm2
