--- a/2015-08-13-zsh.md
+++ b/2015-08-13-zsh.md
@@ -50,7 +50,7 @@ alias -s html=vi
 alias gcid="git log | head -1 | awk '{print substr(\$2,1,7)}' | pbcopy"
 ```
 
-配置完毕之后，在 zsh 下直接输入`xxx.rb`，将自动用 vi 打开，直接输入`xxx.tgz`，将直接按照`tar -xzvf`解压。最后一个`gcid`讲当前 git 项目的第一个 commit 的 id 复制到系统剪切板（`pbcopy`是 Mac 下的复制到系统剪切板命令，linux 请参考相应的发行版更改），在执行 rebase 的时候特别方便。
+配置完毕之后，在 zsh 下直接输入`xxx.rb`，将自动用 vi 打开，直接输入`xxx.tgz`，将直接按照`tar -xzvf`解压。最后一个`gcid`将当前 git 项目的第一个 commit 的 id 复制到系统剪切板（`pbcopy`是 Mac 下的复制到系统剪切板命令，linux 请参考相应的发行版更改），在执行 rebase 的时候特别方便。
 
 ### 跳转
 
@@ -120,9 +120,9 @@ oh-my-zsh 提供极为丰富的插件，在`~/.oh-my-zsh/plugins`目录下查看
 该插件增强 Mac 下的使用体验，提供了如下命令：
 
 - `cdf`: 在 Finder 中打开要 cd 的目录；
-- quick-look: 快速预览该文件，类似于在 Finder 中按下空格键；
-- man preview: 在 preview 中打开 man page； 
-- itunes: 命令行操作 iTunes。
+- `quick-look`: 快速预览该文件，类似于在 Finder 中按下空格键；
+- `man preview`: 在 preview 中打开 man page； 
+- `itunes`: 命令行操作 iTunes。
 
 ```bash
 > itunes
@@ -160,16 +160,16 @@ proxychains 是命令行的科学上网工具。安装`brew install proxychains-
 
 ### htop
 
-[Htop](http://hisham.hm/htop/) 是一款运行于 Linux 系统监控与进程管理软件，用于取代 Unix 下传统的 top。与top只提供最消耗资源的进程列表不同，htop提供所有进程的列表，并且使用彩色标识出处理器、swap和内存状态。[^htop-wiki]
+[htop](http://hisham.hm/htop/) 是一款运行于 Linux 系统监控与进程管理软件，用于取代 Unix 下传统的 top。与 top 只提供最消耗资源的进程列表不同，htop 提供所有进程的列表，并且使用彩色标识出处理器、swap 和内存状态。[^htop-wiki]
 ![htop](http://wulfric.qiniudn.com/htop.png "htop")
 
-htop命令优点[^htop-lizhenghn]:
+htop 命令优点[^htop-lizhenghn]:
 
-- 快速查看关键性能统计数据，如CPU（多核布局）、内存/交换使用；
+- 快速查看关键性能统计数据，如 CPU（多核布局）、内存/交换使用；
 - 可以横向或纵向滚动浏览进程列表，以查看所有的进程和完整的命令行；
 - 杀掉进程时可以直接选择而不需要输入进程号；
 - 通过鼠标操作条目；
-- 比top启动得更快。
+- 比 top 启动得更快。
 
 ### ccat
 
