--- a/2015-08-12-iterm2.md
+++ b/2015-08-12-iterm2.md
@@ -61,7 +61,7 @@ A: Go to Preferences->Profiles tab. Select your profile on the left, and then op
 
 ### 自动完成
 
-iTerm2 可以自动补齐命令，输入若干字符，按`⌘+d`弹出自动补齐窗口，列出曾经使用过的命令。
+iTerm2 可以自动补齐命令，输入若干字符，按`⌘+;`弹出自动补齐窗口，列出曾经使用过的命令。
 
 ![iTerm2 autocomplete](http://wulfric.qiniudn.com/R-iterm2-autocomplete.png "iTerm2 autocomplete")
 
@@ -84,6 +84,8 @@ iTerm2 也可以使用历史记录，按`⌘+Shift+h`弹出历史记录窗口。
 ## mosh
 
 [mosh](https://mosh.mit.edu/) 是全平台更好的 ssh 工具，更健壮，支持断续连接，支持除了 iPhone 之外的几乎任何平台。（iOS 让人爱不释手的优点，也正是它让人恨之入骨的缺点）
+
+在 OSX 下安装`brew install mobile-shell`，其他平台请参考官方[教程](https://mosh.mit.edu/#getting)。
 
 ![mosh](http://wulfric.qiniudn.com/R-mosh.png "mosh")
 
