--- a/2015-08-13-zsh.md
+++ b/2015-08-13-zsh.md
@@ -7,7 +7,7 @@ tags: [zsh, oh-my-zsh, autojump, proxychains, ag, htop, ccat]
 
 ## Zsh
 
-Zsh 也许是目前最好用的 bash 工具了。这里列举了 zsh 的一些优点：[为什么要使用 zsh](https://www-s.acm.illinois.edu/workshops/zsh/why.html)。
+Zsh 也许是目前最好用的 shell，是 bash 替代品中较为优秀的一个。这里列举了 zsh 的一些优点：[为什么要使用 zsh](https://www-s.acm.illinois.edu/workshops/zsh/why.html)。
 
 Mac 自带 zsh，不过我们当然要用最新版啦，其他发行版请参照各自的软件安装方法。安装完毕后，重新打开 iTerm2。
 
@@ -54,7 +54,7 @@ alias gcid="git log | head -1 | awk '{print substr(\$2,1,7)}' | pbcopy"
 
 ### 跳转
 
-zsh 的目录跳转更为智能，你无需输入`cd`，直接输入路径即可。`..`表示后退一级目录，`../../`表示后退两级，依次类推。 
+zsh 的目录跳转更为智能，你无需输入`cd`，直接输入路径即可。`..`表示后退一级目录，`../../`表示后退两级，依次类推。（`...`的作用和`../../`相同） 
 
 输入`d`，将列出当前 session 访问过的所有目录，再按提示的数字即可进入相应目录。
 
