--- a/2015-08-14-git-tools.md
+++ b/2015-08-14-git-tools.md
@@ -22,3 +22,5 @@ PS: P4Merge 并没有针对 Retina 屏优化，请使用 [Retinizer](http://reti
 [tig](https://github.com/jonas/tig) 则是终端的 git 工具，可以认为是终端下的SourceTree。有了这么一个工具，便可以在终端快速的查看 commit 和 diff 信息了。有了 tig，再也不需要记住各种`git log`和`git diff`的命令了。
 
 ![tig](http://wulfric.qiniudn.com/tig.png "tig")
+
+我的使用习惯是，用 SourceTree 看平时的 commit 和 diff，rebase 或 merge 的时候出现冲突用 p4Merge 解决，临时查看在终端 commit 和 diff 用 tig。
