--- a/2015-08-14-git-tools.md
+++ b/2015-08-14-git-tools.md
@@ -23,4 +23,4 @@ PS: P4Merge 并没有针对 Retina 屏优化，请使用 [Retinizer](http://reti
 
 ![tig](http://wulfric.qiniudn.com/tig.png "tig")
 
-我的使用习惯是，用 SourceTree 看平时的 commit 和 diff，rebase 或 merge 的时候出现冲突用 p4Merge 解决，临时查看在终端 commit 和 diff 用 tig。
+我的使用习惯是，用 SourceTree 看平时的 commit 和 diff，rebase 或 merge 的时候出现冲突用 p4Merge 解决，临时在终端查看 commit 和 diff 用 tig。
