--- a/2015-08-12-iterm2.md
+++ b/2015-08-12-iterm2.md
@@ -85,6 +85,8 @@ iTerm2 也可以使用历史记录，按`⌘+Shift+h`弹出历史记录窗口。
 
 你可以自由定制喜欢的配色，[这里](http://iterm2colorschemes.com/) 收集了大量 iTerm2 的主题，你可以选择使用。我用的是`Zenburn`。在其 github repo 里下载对应的`xxx.itermcolors`文件，双击安装使用。
 
+![iTerm2 color](http://wulfric.qiniudn.com/iterm2-color.png "iTerm2 color")
+
 ## mosh
 
 [mosh](https://mosh.mit.edu/) 是全平台更好的 ssh 工具，更健壮，支持断续连接，支持除了 iPhone 之外的几乎任何平台。（iOS 让人爱不释手的优点，也正是它让人恨之入骨的缺点）
