--- a/2015-08-12-iterm2.md
+++ b/2015-08-12-iterm2.md
@@ -65,7 +65,7 @@ iTerm2 可以自动补齐命令，输入若干字符，按`⌘+;`弹出自动补
 
 ![iTerm2 autocomplete](http://wulfric.qiniudn.com/R-iterm2-autocomplete.png "iTerm2 autocomplete")
 
-iTerm2 也可以使用历史记录，按`⌘+Shift+h`弹出历史记录窗口。
+iTerm2 也可以使用历史记录，按`⌘+Shift+h`弹出历史粘贴记录窗口，`⌘+Shift+;`弹出历史命令记录窗口。
 
 ![iTerm2 copy history](http://wulfric.qiniudn.com/R-iterm2-copy-history.png "iTerm2 copy history")
 
