--- a/2017-04-01-jrebel.md
+++ b/2017-04-01-jrebel.md
@@ -7,7 +7,7 @@ tags: [分布式, dubbo, jrebel, spring, remote, hotswap]
 
 ![jrebel ](https://zeroturnaround.com/wp-content/uploads/2011/02/jrebel-dl.png "jrebel")
 
-在开发 java 程序的时候，如果改动非常频繁，每次改动都要重新打包、部署，对于很重的应用（比如本文所说的 dubbo provider 服务），这样反复的流程十分消耗精力和热情。我们需要一个工具，当代码作改动之后能够立即看到效果。Java 在 1.4 的时候引入了 HotSwap 技术，允许调试者使用同一个类标识来更新类的字节码。这意味着所有对象都可以引用一个更新后的类，并在它们的方法被调用的时候执行新的代码，这就避免了无论何时只要有类的字节码被修改就要重载容器的这种要求[^hotswap-jrebel]。不幸的是，这种重定义仅限于修改方法体——除了方法体之外，它既不能添加方法或域，也不能修改其他任何东西。
+在开发 java 程序的时候，如果改动非常频繁，每次改动都要重新打包、部署，对于很重的应用（比如本文所说的 dubbo provider 服务），这样反复的流程十分消耗精力和热情。我们需要一个工具，当代码作改动之后能够立即看到效果。Java 在 1.4 的时候引入了 HotSwap 技术，允许调试者使用同一个类标识来更新类的字节码。这意味着所有对象都可以引用一个更新后的类，并在它们的方法被调用的时候执行新的代码，这就避免了无论何时只要有类的字节码被修改就要重载容器的这种要求[^hotswap-jrebel]。不幸的是，这种重定义仅限于修改方法体---除了方法体之外，它既不能添加方法或域，也不能修改其他任何东西。
 
 和 PHP 这样的脚本语言不一样，Java 部署是一个令人心烦的问题。一个运行中的 Java 程序相当于一辆在公路上奔跑的汽车，而 HotSwap 技术只能让你更换坐垫，但是让你想要更换轮胎的时候，HotSwap 就帮不上忙了，这个时候你只能停下来，换掉轮胎，再重新启动。而对于 PHP 来说，每个请求都会新开一个进程加载所有的 .php 文件编译和执行，所以不存在这个问题。运行 PHP 程序相当于给静止的汽车拍照，你大可以换完轮胎之后再拍照，这没有任何不良影响。（这个比喻可能不太恰当，却很有趣：在比喻中，静态的语言看起来是运动的，而动态语言看起来是静止的）
 
@@ -71,6 +71,8 @@ IDE 运行本地应用最简单。参见[官方教程](https://zeroturnaround.co
 java -agentpath:/Users/xxxx/Library/Application Support/IntelliJIdea2017.1/jr-ide-idea/lib/jrebel6/lib/libjrebel64.dylib foo.bar.MyApp
 ```
 
+P.S.: 注意上面的「Application Support」需要换成「Application\ Support」。
+
 dubbo 一般推荐使用 start.sh 脚本来启动应用，我们编辑 start.sh 文件，在启动的具体位置那里，将「-agentpath:...」添加在 java 后面，大致如下。
 
 ```shell
@@ -86,11 +88,11 @@ java -agentpath:... $JAVA_OPTS $JAVA_MEM_OPTS $JAVA_DEBUG_OPTS -classpath ...
 5. 修改代码，构建改动的文件；
 6. 访问接口，查看结果是否实时改变。
 
-可以看到，JRebel 接管了 console。
+从输出结果可以看到，JRebel 接管了 console。
 
 ### 远程服务器运行
 
-官方[教程1](https://zeroturnaround.com/software/jrebel/quickstart/intellij/?run=remote#!/server-configuration)，[教程2](https://manuals.zeroturnaround.com/jrebel/remoteserver/intellij.html)[^ jrebel-doc]。
+官方[教程1](https://zeroturnaround.com/software/jrebel/quickstart/intellij/?run=remote#!/server-configuration)，[教程2](https://manuals.zeroturnaround.com/jrebel/remoteserver/intellij.html)更好[^jrebel-doc]。
 
 同上，在 JRebel 配置页选择「Run on a remote server」，根据给出的建议配置好启动项。
 
@@ -104,7 +106,7 @@ java -agentpath:... -Drebel.remoting_plugin=true ... -jar ...
 
 1. 配置启动参数和添加远程服务器，如上所述；
 2. 选择需要热部署的模块，注意这个时候「generate rebel.xml」和「generate rebel-remote.xml」 两个都要选中；
-3. 将包含 rebel.xml 和 rebel-remote.xml 的代码部署到远程服务器。本地打包并上传或者代码上传并在远程服务器打包都可以；
+3. 将包含 rebel.xml 和 rebel-remote.xml 的代码部署到远程服务器。本地打包并上传，或者代码上传并在远程服务器打包都可以；
 4. 在远程服务器上`start.sh`启动应用；
 5. 修改代码，构建改动的文件；
 6. 访问接口，查看结果是否实时改变。
@@ -118,4 +120,4 @@ P.S.: JRebel 对 Spring 的 bean 注入默认就有很好的支持，参见 [JRe
 
 
 [^hotswap-jrebel]: HotSwap 和 JRebel 原理[原文](https://dzone.com/articles/reloading-java-classes-401)，[译文](http://www.hollischuang.com/archives/598)
-[^ jrebel-doc]: 参照官方的[详细使用文档](https://manuals.zeroturnaround.com/jrebel/index.html)是更好的选择
+[^jrebel-doc]: 参照官方的[详细使用文档](https://manuals.zeroturnaround.com/jrebel/index.html)是更好的选择
