--- a/2015-08-14-git-tools.md
+++ b/2015-08-14-git-tools.md
@@ -9,15 +9,17 @@ tags: [SourceTree, P4Merge, tig, git]
 
 git [官网](https://git-scm.com/download/gui/linux)收集了几乎所有市面上的图形界面客户端。
 
-[SourceTree](https://www.sourcetreeapp.com/)。在各种[测评](http://www.slant.co/topics/465/~what-are-the-best-git-clients-for-mac-os-x)中，SourceTree 一般被评价为MAC下性价比最高的。SourceTree 在查看 commit 信息，浏览文件的 git log 等方面特别便利。不过一些较为复杂的操作，比如 merge 和 rebase 还是在命令行操作比较放心。
+[SourceTree](https://www.sourcetreeapp.com/)。在各种[测评](http://www.slant.co/topics/465/~what-are-the-best-git-clients-for-mac-os-x)中，SourceTree 一般被评价为 MAC 下性价比最高的。SourceTree 在查看 commit 信息，浏览文件的 git log 等方面特别便利。不过一些较为复杂的操作，比如 merge 和 rebase 还是在命令行操作比较放心。
 
-![SourceTree](https://www.sourcetreeapp.com/images/hero_mac_all@2x.png "SourceTree")
+![SourceTree](http://wulfric.qiniudn.com/git/sourcetree.png "SourceTree")
 
 [P4Merge](http://www.perforce.com/product/components/perforce-visual-merge-and-diff-tools) 也是[测评](http://www.slant.co/topics/48/~what-are-the-best-visual-merge-tools-for-git)中可视化合并工具中性价比最高的。可以将 P4Merge 配置为 git 的默认可视化合并工具，参见[使用 P4Merge 作为 GIT 的可视化合并工具](http://wulfric.me/2015/01/git-merge-with-p4merge/)。
 
 ![P4Merge](http://www.perforce.com/sites/default/files/p4merge_three_pane_1.jpg)
 
 PS: P4Merge 并没有针对 Retina 屏优化，请使用 [Retinizer](http://retinizer.mikelpr.com/) 工具修正一下。
+
+最近发现了一款新的三方合并和比较工具：[Kaleidoscope](http://www.kaleidoscopeapp.com/)，效果很棒，只是价格偏高。 官网有 screenshots，做的比较漂亮。
 
 [tig](https://github.com/jonas/tig) 则是终端的 git 工具，可以认为是终端下的SourceTree。有了这么一个工具，便可以在终端快速的查看 commit 和 diff 信息了。有了 tig，再也不需要记住各种`git log`和`git diff`的命令了。
 
