--- a/2017-08-08-php7-xhprof.md
+++ b/2017-08-08-php7-xhprof.md
@@ -124,6 +124,7 @@ $ ls /var/tmp/xhprof
 和之前一样，将要检查性能的代码包裹起来就可以了。
 
 ```php
+<?php
 xhprof_enable(XHPROF_FLAGS_CPU + XHPROF_FLAGS_MEMORY);
  
 // 要检查性能的代码
