--- a/2017-08-08-php7-xhprof.md
+++ b/2017-08-08-php7-xhprof.md
@@ -136,7 +136,55 @@ $xhprof_runs = new \XHProfRuns_Default();
 $run_id = $xhprof_runs->save_run($xhprof_data, 'your_project');
 ```
 
-当然这里也可以将前后的代码单独开一个php文件：header.php 和 footer.php，然后用这两个文件包裹代码。
+当然这里也可以将前后的代码单独开一个php文件：header.php 和 footer.php。
+
+```php
+// header.php
+<?php
+if (extension_loaded('xhprof')) {
+    include_once 'xhprof_lib/utils/xhprof_lib.php';
+    include_once 'xhprof_lib/utils/xhprof_runs.php';
+    xhprof_enable(XHPROF_FLAGS_CPU + XHPROF_FLAGS_MEMORY);
+}
+?>
+```
+
+```php
+// footer.php
+<?php
+if (extension_loaded('xhprof')) {
+    $profiler_namespace = 'your_project';
+    $xhprof_data = xhprof_disable();
+    $xhprof_runs = new XHProfRuns_Default();
+    $run_id = $xhprof_runs->save_run($xhprof_data, $profiler_namespace);
+}
+?>
+```
+
+然后用这两个文件包裹代码。如果是 Apache，可以在项目的 .htaccess 文件中添加：
+
+```
+#php_value auto_prepend_file /var/www/html/xhprof/header.php
+#php_value auto_append_file /var/www/html/xhprof/footer.php
+```
+
+如果是 nginx + php-fpm，可以在php-fpm.d/www.conf 添加：
+
+```
+php_value[auto_prepend_file] = /var/www/html/xhprof/header.php
+php_value[auto_append_file] = /var/www/html/xhprof/footer.php
+```
+
+个人还是更喜欢在需要的地方手动 require：
+
+```php
+<?php
+include_once  '/var/www/html/xhprof/header.php';
+
+// 要检查性能的代码
+
+include_once  '/var/www/html/xhprof/footer.php';
+```
 
 ## Notice
 
