--- a/2017-08-08-php7-xhprof.md
+++ b/2017-08-08-php7-xhprof.md
@@ -186,6 +186,8 @@ include_once  '/var/www/html/xhprof/header.php';
 include_once  '/var/www/html/xhprof/footer.php';
 ```
 
+这样更加灵活，而且不会每个请求都生成一份报告，只在需要的时候生成。
+
 ## Notice
 
 1. 如果遇到错误 failed to execute cmd: " dot -Tpng". stderr: ` ([process:24220](http://process:24220/)): Pango-WARNING **: Invalid UTF-8 string passed to pango_layout_set_text() '。暂时不清楚怎么解决，可以选择避开它。将 xhprof_lib/utils/callgraph_utils.php 的 121，122 行注释掉。
