--- a/2017-08-08-php7-xhprof.md
+++ b/2017-08-08-php7-xhprof.md
@@ -194,13 +194,16 @@ include_once  '/var/www/html/xhprof/footer.php';
 2. 如果想要更好看的 UI，可以参考以下[链接1](https://lamosty.com/2015/03/19/profiling-wordpress-with-xhprof-on-mac-os-x-10-10/)，[链接2](http://blog.oneapm.com/apm-tech/235.html)，[链接3](https://tideways.io/profiler/xhprof-for-php7-php5.6) (手动搭免费）。
 3. 下面是一些参数说明
 
-> Inclusive Time                 包括子函数所有执行时间。
->
-> Exclusive Time/Self Time       函数执行本身花费的时间，不包括子树执行时间。
-> Wall Time                      花去了的时间或挂钟时间。
-> CPU Time                       用户耗的时间+内核耗的时间
-> Inclusive CPU                  包括子函数一起所占用的CPU
-> Exclusive CPU                  函数自身所占用的CPU
+|           性能点            |          描述           |
+| :----------------------: | :-------------------: |
+|      Inclusive Time      |      包括子函数所有执行时间      |
+| Exclusive Time/Self Time | 函数执行本身花费的时间，不包括子树执行时间 |
+|        Wall Time         |      花去了的时间或挂钟时间      |
+|         CPU Time         |    用户耗的时间 + 内核耗的时间    |
+|      Inclusive CPU       |    包括子函数一起所占用的 CPU    |
+|      Exclusive CPU       |     函数自身所占用的 CPU      |
+
+
 
 [^1]: [xhprof issue](https://github.com/phacility/xhprof/issues/82) 和[某博文](http://www.jianshu.com/p/c420ebe6ce39)提到了一些替代 repo，除此之外还有 [tideways](https://github.com/tideways/php-profiler-extension) 等
 [^2]: nginx 的配置参考了 [ 某 gitbook](https://wizardforcel.gitbooks.io/nginx-doc/content/Text/6.5_nginx_php_fpm.html) 和 [nginx wiki](https://www.nginx.com/resources/wiki/start/topics/examples/phpfcgi/)
