--- a/2017-08-08-php7-xhprof.md
+++ b/2017-08-08-php7-xhprof.md
@@ -190,9 +190,15 @@ include_once  '/var/www/html/xhprof/footer.php';
 
 ## Notice
 
-1. 如果遇到错误 failed to execute cmd: " dot -Tpng". stderr: ` ([process:24220](http://process:24220/)): Pango-WARNING **: Invalid UTF-8 string passed to pango_layout_set_text() '。暂时不清楚怎么解决，可以选择避开它。将 xhprof_lib/utils/callgraph_utils.php 的 121，122 行注释掉。
-2. 如果想要更好看的 UI，可以参考以下[链接1](https://lamosty.com/2015/03/19/profiling-wordpress-with-xhprof-on-mac-os-x-10-10/)，[链接2](http://blog.oneapm.com/apm-tech/235.html)，[链接3](https://tideways.io/profiler/xhprof-for-php7-php5.6) (手动搭免费）。
-3. 下面是一些参数说明
+1. 如果遇到错误 failed to execute cmd: " dot -Tpng". stderr: ` ([process:24220](http://process:24220/)): Pango-WARNING **: Invalid UTF-8 string passed to pango_layout_set_text() '。暂时不清楚怎么解决，可以选择避开它。将 xhprof_lib/utils/callgraph_utils.php 的 121，122 行的打印和 exit 注释掉。
+2. 如果遇到错误 `Error: either we can not find profile data for run_id xxx or the threshold 0.01 is too small or you do not have 'dot' image generation utility installed`，无法生成 png 图片，可能是因为生成的文件中有不能识别的字符，修复如下[^3]：
+```php
+$cmd = " dot -T".$type;
+// 在 cmd 之后添加一个转码工作就可以了
+$dot_script = iconv("UTF-8", "ASCII//IGNORE", $dot_script);
+```
+3. 如果想要更好看的 UI，可以参考以下[链接1](https://lamosty.com/2015/03/19/profiling-wordpress-with-xhprof-on-mac-os-x-10-10/)，[链接2](http://blog.oneapm.com/apm-tech/235.html)，[链接3](https://tideways.io/profiler/xhprof-for-php7-php5.6) (手动搭免费）。
+4. 下面是一些参数说明
 
 |           性能点            |          描述           |
 | :----------------------: | :-------------------: |
@@ -207,3 +213,4 @@ include_once  '/var/www/html/xhprof/footer.php';
 
 [^1]: [xhprof issue](https://github.com/phacility/xhprof/issues/82) 和[某博文](http://www.jianshu.com/p/c420ebe6ce39)提到了一些替代 repo，除此之外还有 [tideways](https://github.com/tideways/php-profiler-extension) 等
 [^2]: nginx 的配置参考了 [ 某 gitbook](https://wizardforcel.gitbooks.io/nginx-doc/content/Text/6.5_nginx_php_fpm.html) 和 [nginx wiki](https://www.nginx.com/resources/wiki/start/topics/examples/phpfcgi/)
+[^3]: 这个在网上很难找到解决方案，我在 PHP 的 bug 平台找到了它：[链接](https://bugs.php.net/bug.php?id=58655)
