--- a/2017-04-01-jrebel.md
+++ b/2017-04-01-jrebel.md
@@ -64,7 +64,7 @@ IDE 运行本地应用最简单。参见[官方教程](https://zeroturnaround.co
 
 ### 命令行运行
 
-在 JRebel 设置页的「Startup」标签中选择「Run locally from command line」， 选择合适的 jvm 和目标环境。我的 dubbo 使用了 netty 部署，所以选择了「Standalone application」，给出的启动参数如下。
+在 JRebel 设置页的「Startup」标签中选择「Run locally from command line」， 选择合适的 jvm 和目标环境。我的 dubbo 没有使用 web 容器部署，所以选择了「Standalone application」，给出的启动参数如下。
 
 ```shell
 # agentpath 是必需的，foo.bar.MyApp 是你要运行的程序
