--- a/2017-08-08-php7-xhprof.md
+++ b/2017-08-08-php7-xhprof.md
@@ -9,7 +9,7 @@ xhprof 是 Facebook 09 年出的一个很优秀的 PHP profiler 工具，但 Fac
 
 ## 使用兼容的 xhprof 安装
 
-xhprof已经很久没有更新了，使用他人的repo[^1]:
+xhprof 已经很久没有更新了，使用他人的repo[^1]:
 
 ```shell
 cd ~
@@ -86,7 +86,7 @@ server {
 
 当配置成功之后，将 xhprof 中的 xhprof_lib 和 xhprof_html 两个文件夹复制到 /var/www/html/xhprof/ 下，然后访问 http://your_host/xhprof_html/index.php 即可。
 
-安装 `yum install graphviz` 查看图形界面。
+PS：安装 `yum install graphviz` 查看图形界面。
 
 修改 nginx 配置中的 root 直接指向 xhprof_html，配置如下：
 
