更新 七牛图片文件 域名

--- a/2015-08-11-homebrew.md
+++ b/2015-08-11-homebrew.md
@@ -46,7 +46,7 @@ Further help:
 
 可以方便的搜索、查看和安装和卸载软件，如下图所示：
 
-![brew actions](http://wulfric.qiniudn.com/brew-action.png "brew actions")
+![brew actions](http://qiniu-wulfric.lufeihaidao.top/brew-action.png "brew actions")
 
 按照官方的介绍：
 
