--- a/2015-08-13-zsh.md
+++ b/2015-08-13-zsh.md
@@ -20,11 +20,11 @@ chsh -s `which zsh`
 
 zsh 的命令补全功能非常强大，可以补齐路径，补齐命令，补齐参数等。（请问你记住 tar 的所有参数了吗😃，只要 `tar -`加 tab 键，再也不用 [rtfm](https://zh.wikipedia.org/zh/RTFM) 了😂）
 
-![zsh auto complete](http://wulfric.qiniudn.com/R-zsh-autocomplete.png "zsh auto complete")
+![zsh auto complete](http://qiniu-wulfric.lufeihaidao.top/R-zsh-autocomplete.png "zsh auto complete")
 
 按下 tab 键显示出所有待选项后，再按一次 tab 键，即进入选择模式，进入选择模式后，按 tab 切向下一个选项，按 shift+tab 键切向上一个选项，ctrl+f/b/n/p 可以向前后左右切换。
 
-![zsh tab 切换](http://wulfric.qiniudn.com/R-zsh-tab-tab.png "zsh tab 切换")
+![zsh tab 切换](http://qiniu-wulfric.lufeihaidao.top/R-zsh-tab-tab.png "zsh tab 切换")
 
 以前杀进程是`ps aux | grep xxx`查进程的 PID，然后`kill PID`。有了 zsh，直接`kill xxx`然后按下 tab 键即可～
 
@@ -150,7 +150,7 @@ brew cask install xxx
 proxychains4 brew cask install xxx
 ```
 
-![proxychains](http://wulfric.qiniudn.com/proxychain.png "proxychains")
+![proxychains](http://qiniu-wulfric.lufeihaidao.top/proxychain.png "proxychains")
 
 使用 proxychains 需要本地先开启科学上网的工具，比如 VPN/shadowsocks，然后在配置文件中添加相应的配置，其配置方法和 chrome 下的科学上网插件很相似，可以参考相关文档。
 
@@ -176,7 +176,7 @@ socks5 	127.0.0.1 1080
 
 [htop](http://hisham.hm/htop/) 是一款运行于 Linux 系统监控与进程管理软件，用于取代 Unix 下传统的 top。与 top 只提供最消耗资源的进程列表不同，htop 提供所有进程的列表，并且使用彩色标识出处理器、swap 和内存状态。[^htop-wiki]
 
-![htop](http://wulfric.qiniudn.com/htop.png "htop")
+![htop](http://qiniu-wulfric.lufeihaidao.top/htop.png "htop")
 
 htop 命令优点[^htop-lizhenghn]:
 
@@ -190,7 +190,7 @@ htop 命令优点[^htop-lizhenghn]:
 
 [ccat](https://github.com/jingweno/ccat) 是上色的`cat`，在 cat 的基础上提供了语法高亮。可通过`brew install ccat`安装。目前已支持`ruby`, `python`, `javascript`, `java`, `c`, `go`。
 
-![ccat](http://wulfric.qiniudn.com/R-ccat.png "ccat")
+![ccat](http://qiniu-wulfric.lufeihaidao.top/R-ccat.png "ccat")
 
 
 
