--- a/2023-04-05-gpt1-ch.md
+++ b/2023-04-05-gpt1-ch.md
@@ -3,6 +3,7 @@ title: GPT1 论文翻译：Improving Language Understanding by Generative Pre-Tr
 date: 2023-04-05 23:32
 categories: [技术]
 tags: [ai, chatgpt]
+math: true
 ---
 
 通过生成式预训练提高语言模型的理解能力。
@@ -57,9 +58,9 @@ $$L_2(C) = \Sigma_{(x,y)} logP(y|x^1,...,x^m)$$
 $$L_3(C) = L_2(C) + \lambda * L_1(C)$$
 总的来说，在微调过程中，我们仅需要额外的参数$W_y$以及分隔符token的嵌入（在第3.3节中描述）。
 
-![Figure1](http://static.wulfric.me/chatgpt/gpt1.jpg)
+![图1: (左侧) 这项工作中用到的 transformer  结构和训练目标。（右侧）微调阶段，在不同任务上的输入变换。我们将所有结构化的输出转换成可以被我们的预训练模型处理的token序列，然后在最后添加一层线性+softmax层](http://static.wulfric.me/chatgpt/gpt1.jpg)
 
-图1: (左侧) 这项工作中用到的 transformer  结构和训练目标。（右侧）微调阶段，在不同任务上的输入变换。我们将所有结构化的输出转换成可以被我们的预训练模型处理的token序列，然后在最后添加一层线性+softmax层。
+
 
 对于某些任务，如文本分类，我们可以直接按照上述方法微调我们的模型。某些其他任务，如问题回答或文本蕴含，具有结构化输入，如有序句子对或文档、问题和答案的三元组。由于我们的预训练模型是在连续文本序列上进行训练的，因此我们需要对其进行一些修改才能将其应用于这些任务。之前的工作提出了在转移表示之上学习特定任务的架构[44]。这种方法重新引入了大量任务特定的定制，并且没有为这些额外的架构组件使用迁移学习。相反，我们使用遍历式方法[52]，将结构化输入转换为我们的预训练模型可以处理的有序序列。这些输入转换使我们能够避免在任务之间对架构进行大量更改。我们在下面简要描述了这些输入转换，图1提供了一个视觉示例。所有转换都包括添加随机初始化的开始和结束标记（⟨s⟩, ⟨e⟩）。
 
@@ -95,23 +96,17 @@ $$L_3(C) = L_2(C) + \lambda * L_1(C)$$
 
 表2详细展示了我们的模型在不同NLI任务中与之前最先进方法的各种对比结果。在五个数据集中的四个上，我们的方法明显优于基准线，相较于之前的最佳结果，在MNLI上绝对提升达到1.5%，在SciTail上绝对提升达到5%，在QNLI上绝对提升达到5.8%，在SNLI上绝对提升达到0.6%。这证明了我们的模型在处理多句子推理和应对语言歧义方面的优势。在RTE（一个较小的数据集，包含2490个示例）上，我们取得了56%的准确率，低于多任务双向LSTM模型报告的61.7%。鉴于我们的方法在更大的NLI数据集上的强大性能，很可能我们的模型也将从多任务训练中受益，但我们目前尚未探讨这一点。
 
-![Table2](http://static.wulfric.me/chatgpt/GPT1-table2.jpg)
-
-表2：自然语言推理任务的实验结果，将我们的模型与当前最先进的方法进行比较。5x表示5个模型的集成。所有数据集都使用准确率作为评估指标。
+![表2：自然语言推理任务的实验结果，将我们的模型与当前最先进的方法进行比较。5x表示5个模型的集成。所有数据集都使用准确率作为评估指标](http://static.wulfric.me/chatgpt/GPT1-table2.jpg)
 
 答和常识推理：另一个涉及单句和多句推理的任务是问答。我们采用了最近发布的RACE数据集[30]，该数据集包含了来自初中和高中考试的英文段落及相关问题。与CNN [19] 或SQuaD [47]等其他数据集相比，这个语料库包含了更多的推理类型问题，为我们的模型提供了极佳的评估，因为我们的模型经过训练能够处理长距离的上下文。此外，我们还评估了Story Cloze Test[40]，这个测试要求从两个选项中为多句故事选择正确的结尾。在这些任务上，我们的模型再次明显优于先前的最佳结果——在Story Cloze上最高提高了8.9%，在RACE上整体提高了5.7%。这证明了我们的模型在有效处理长距离上下文方面具有很强的能力。
 
-![Table2](http://static.wulfric.me/chatgpt/GPT1-table3.jpg)
-
-表3：在问答和常识推理方面的结果，将我们的模型与当前最先进的方法进行比较。9x表示9个模型的集成。
+![表3：在问答和常识推理方面的结果，将我们的模型与当前最先进的方法进行比较。9x表示9个模型的集成](http://static.wulfric.me/chatgpt/GPT1-table3.jpg)
 
 语义相似度：语义相似度（或释义检测）任务包括预测两个句子在语义上是否等价。挑战在于识别概念的重新表述，理解否定语句以及处理句法歧义。我们在这个任务中使用了三个数据集——Microsoft Paraphrase语料库（MRPC）[14]（来源于新闻报道），Quora问题对（QQP）数据集[9]，以及语义文本相似度基准（STS-B）[6]。我们在三个语义相似度任务的两个任务中取得了最佳成绩（表4），在STS-B上的绝对增益达到1分。在QQP上的性能差距显著，与单任务BiLSTM + ELMo + Attn相比，绝对提高了4.2%。
 
 最后，我们在两个不同的文本分类任务上进行评估。语言可接受性语料库（CoLA）[65] 包含了关于句子是否符合语法规则的专家评判，用以测试训练模型的固有语言偏差。另一方面，斯坦福情感树库（SST-2）[54] 是一个标准的二分类任务。我们的模型在CoLA上获得了45.4分，这比先前最好的结果35.0有显著提高，展示了我们模型所学到的固有语言偏差。在SST-2上，模型也取得了91.3%的准确率，与最佳结果相当。我们在GLUE基准测试上也获得了72.8的总分，明显优于先前最好的68.9。
 
-![Table2](http://static.wulfric.me/chatgpt/GPT1-table4.jpg)
-
-表4：语义相似性和分类结果，将我们的模型与当前最先进的方法进行比较。本表中所有任务评估均使用GLUE基准测试进行。（mc= Mathews相关系数，acc=准确率，pc=Pearson相关系数）
+![表4：语义相似性和分类结果，将我们的模型与当前最先进的方法进行比较。本表中所有任务评估均使用GLUE基准测试进行。（mc= Mathews相关系数，acc=准确率，pc=Pearson相关系数）](http://static.wulfric.me/chatgpt/GPT1-table4.jpg)
 
 总体来说，我们的方法在12个评估数据集中的9个上取得了新的最佳成绩，很多情况下超过了集成模型。我们的结果还表明，我们的方法在不同规模的数据集上都表现良好，从较小的数据集如STS-B（约5.7k训练样本）到最大的数据集SNLI（约550k训练样本）。
 
@@ -119,9 +114,7 @@ $$L_3(C) = L_2(C) + \lambda * L_1(C)$$
 
 迁移层数的影响：我们观察了从无监督预训练向有监督目标任务迁移不同数量层数的影响。图2（左）描绘了我们在MultiNLI和RACE上的方法性能，作为迁移层数量的函数。我们观察到标准结果，即迁移嵌入可以提高性能，每个Transformer层都能进一步带来好处，对于MultiNLI的完全转移，可以提高9%。这表明预训练模型中的每一层都包含解决目标任务的有用功能。
 
-![Figure2](http://static.wulfric.me/chatgpt/gpt1-2.jpg)
-
-图2：（左）将从预训练语言模型迁移的层数逐渐增加对RACE和MultiNLI的影响。（右）图表显示了LM预训练更新作为函数的不同任务零样本性能的演变。任务性能在随机猜测基线和使用单一模型的当前最先进技术之间归一化。
+![图2：（左）将从预训练语言模型迁移的层数逐渐增加对RACE和MultiNLI的影响。（右）图表显示了LM预训练更新作为函数的不同任务零样本性能的演变。任务性能在随机猜测基线和使用单一模型的当前最先进技术之间归一化](http://static.wulfric.me/chatgpt/gpt1-2.jpg)
 
 零样本表现：我们希望更好地了解为什么对Transformer进行语言模型预训练是有效的。一个假设是底层生成模型为了提高其语言建模能力，学会了我们用于评估的许多任务，而Transformer相比LSTM的更结构化的注意力记忆有助于更好地迁移。我们设计了一系列启发式解决方案，使用底层生成模型在无监督微调的情况下执行任务。我们在图2（右）中显示了在生成预训练过程中这些启发式解决方案的有效性。我们观察到这些启发式方法的性能在训练过程中稳定且稳步提高，表明生成预训练支持学习各种与任务相关的功能。我们还观察到LSTM在零样本性能方面波动较大，表明Transformer架构的归纳偏差有助于迁移。
 
@@ -143,7 +136,7 @@ $$L_3(C) = L_2(C) + \lambda * L_1(C)$$
 
 
 [^tna]: fine-tune 翻译成微调；adaption 翻译成调整，有些翻译成适应性、适应，个人感觉在这里是调整的意思。后文也提到了，对于特定的任务，会把输入的词句做一些简单的调整（比如添加分隔符等）。
-[^dtm]: 在机器学习中，discriminatively trained model（判别式训练模型）是一种常见的模型训练方法。该方法的主要目标是学习一个函数，该函数可以将输入数据映射到其相应的输出。与生成式模型不同，判别式模型不是直接建模联合分布 P(X,Y)，而是直接建模条件分布 P(Y|X)，也就是在给定输入 X 的情况下预测输出 Y。判别式模型通常使用梯度下降等优化方法进行训练，优化目标是最大化对数据集的条件对数似然估计，或最小化分类误差等评价指标。在训练过程中，模型根据输入数据和其正确的标签来调整模型的权重和偏差，以便更准确地预测输出。相对于生成式模型，判别式模型在许多实际应用中具有更好的性能，特别是在分类、标注、聚类等任务中。因为判别式模型直接建模了输入和输出之间的映射关系，可以更好地适应不同的输入分布和输出分布。判别式模型还具有更快的训练速度和更高的泛化能力，这使得它们成为机器学习领域的重要工具之一。需要注意的是，判别式模型的性能取决于训练数据的质量和多样性，以及模型的选择和参数调整。因此，在应用判别式模型时，需要仔细选择训练数据和模型参数，以获得最佳的性能。
+[^dtm]: 在机器学习中，discriminatively trained model（判别式训练模型）是一种常见的模型训练方法。该方法的主要目标是学习一个函数，该函数可以将输入数据映射到其相应的输出。与生成式模型不同，判别式模型不是直接建模联合分布 P(X,Y)，而是直接建模条件分布 $P(Y|X)$，也就是在给定输入 X 的情况下预测输出 Y。判别式模型通常使用梯度下降等优化方法进行训练，优化目标是最大化对数据集的条件对数似然估计，或最小化分类误差等评价指标。在训练过程中，模型根据输入数据和其正确的标签来调整模型的权重和偏差，以便更准确地预测输出。相对于生成式模型，判别式模型在许多实际应用中具有更好的性能，特别是在分类、标注、聚类等任务中。因为判别式模型直接建模了输入和输出之间的映射关系，可以更好地适应不同的输入分布和输出分布。判别式模型还具有更快的训练速度和更高的泛化能力，这使得它们成为机器学习领域的重要工具之一。需要注意的是，判别式模型的性能取决于训练数据的质量和多样性，以及模型的选择和参数调整。因此，在应用判别式模型时，需要仔细选择训练数据和模型参数，以获得最佳的性能。
 [^tr]: 在自然语言处理（NLP）中，text representations（文本表示）是将文本转换为计算机可以处理的形式的过程。文本表示是NLP中的一个重要问题，因为计算机无法直接处理自然语言。因此，研究人员需要将文本转换为计算机可以理解的形式，以便进行下一步的处理，如分类、聚类、信息检索等。文本表示的目标是将文本转换为向量或矩阵的形式，使得计算机可以对其进行数学运算和统计分析。常用的文本表示方法包括以下几种：1) One-hot representation（独热表示）：将每个单词表示为一个向量，其中只有一个元素是1，其余元素均为0。该方法不考虑单词之间的语义和上下文信息，因此效果有限。2) Bag-of-words representation（词袋表示）：将文本表示为一个单词的集合，并统计每个单词出现的次数。该方法考虑了单词的出现频率，但忽略了单词之间的顺序和语义信息。3) Word embedding（词嵌入）：将每个单词表示为一个低维向量，使得单词之间的距离反映了它们之间的语义关系。Word embedding通常使用神经网络模型进行训练，例如Word2Vec和GloVe等。4) Transformer-based representation（基于Transformer的表示）：最近的文本表示方法中，基于Transformer的表示方法已经成为主流。Transformer是一种使用自注意力机制的神经网络，可以将文本转换为一系列向量，每个向量代表一个单词或短语的语义信息。BERT、GPT等是基于Transformer的表示方法的代表。
 
 
