--- a/2023-04-06-gpt2-ch.md
+++ b/2023-04-06-gpt2-ch.md
@@ -3,6 +3,7 @@ title: GPT2 论文翻译：Language Models are Unsupervised Multitask Learners
 date: 2023-04-06 22:48
 categories: [技术]
 tags: [ai, chatgpt]
+math: true
 ---
 
 语言模型是无监督多任务学习者。
