--- a/2023-04-05-gpt1-ch.md
+++ b/2023-04-05-gpt1-ch.md
@@ -106,7 +106,7 @@ $$ L_3(C) = L_2(C) + \lambda * L_1(C) $$
 
 ![表2：自然语言推理任务的实验结果，将我们的模型与当前最先进的方法进行比较。5x表示5个模型的集成。所有数据集都使用准确率作为评估指标](http://static.wulfric.me/chatgpt/GPT1-table2.jpg)
 
-答和常识推理：另一个涉及单句和多句推理的任务是问答。我们采用了最近发布的RACE数据集[30]，该数据集包含了来自初中和高中考试的英文段落及相关问题。与CNN [19] 或SQuaD [47]等其他数据集相比，这个语料库包含了更多的推理类型问题，为我们的模型提供了极佳的评估，因为我们的模型经过训练能够处理长距离的上下文。此外，我们还评估了Story Cloze Test[40]，这个测试要求从两个选项中为多句故事选择正确的结尾。在这些任务上，我们的模型再次明显优于先前的最佳结果——在Story Cloze上最高提高了8.9%，在RACE上整体提高了5.7%。这证明了我们的模型在有效处理长距离上下文方面具有很强的能力。
+问题回答和常识推理：另一个涉及单句和多句推理的任务是问答。我们采用了最近发布的RACE数据集[30]，该数据集包含了来自初中和高中考试的英文段落及相关问题。与CNN [19] 或SQuaD [47]等其他数据集相比，这个语料库包含了更多的推理类型问题，为我们的模型提供了极佳的评估，因为我们的模型经过训练能够处理长距离的上下文。此外，我们还评估了Story Cloze Test[40]，这个测试要求从两个选项中为多句故事选择正确的结尾。在这些任务上，我们的模型再次明显优于先前的最佳结果——在Story Cloze上最高提高了8.9%，在RACE上整体提高了5.7%。这证明了我们的模型在有效处理长距离上下文方面具有很强的能力。
 
 ![表3：在问答和常识推理方面的结果，将我们的模型与当前最先进的方法进行比较。9x表示9个模型的集成](http://static.wulfric.me/chatgpt/GPT1-table3.jpg)
 
